VPC/securitygroup.tf
resource "aws_security_group" "allow_ssh" {
  name        = "allow_ssh"
  description = "allow_ssh inbound traffic"
  vpc_id      = aws_vpc.ketan-vpc.id

  ingress {
    description      = "TLS from VPC"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_ssh"
  }
}
